--- a/8_puzzle_main.ipynb
+++ b/8_puzzle_main.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "name": "8-puzzle-main.ipynb",
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPfpHETTqyQxGl81n+7B8UJ",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,15 +18,37 @@
   },
   "cells": [
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "QJg4JCpp6XCe"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        ""
+        "<a href=\"https://colab.research.google.com/github/Bowasia/8-puzzle-solver/blob/main/8_puzzle_main.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QJg4JCpp6XCe",
+        "outputId": "c5699eb2-eeb2-4188-8bf6-2a93660e354b"
+      },
+      "source": [
+        "print(\"Hi\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hi\n"
+          ]
+        }
+      ]
     }
   ]
 }
