--- a/8_puzzle_main.ipynb
+++ b/8_puzzle_main.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "8-puzzle-main.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPfpHETTqyQxGl81n+7B8UJ",
+      "authorship_tag": "ABX9TyP025eWkmEuM3m4XDFsOHrl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,8 @@
         "outputId": "c5699eb2-eeb2-4188-8bf6-2a93660e354b"
       },
       "source": [
-        "print(\"Hi\")"
+        "print(\"Hi\")\n",
+        "print(\"Hello\")"
       ],
       "execution_count": 1,
       "outputs": [
@@ -49,6 +50,28 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "P8gQHHYT8NwC"
+      },
+      "source": [
+        "import pandas as pd\n"
+      ],
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4OPhjIuW8Vy7"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
