Editted by Joey for the FIRST time in Joey life!!!

--- a/8_puzzle_main.ipynb
+++ b/8_puzzle_main.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "8-puzzle-main.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP025eWkmEuM3m4XDFsOHrl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,9 +37,10 @@
       },
       "source": [
         "print(\"Hi\")\n",
-        "print(\"Hello\")"
+        "print(\"Hello\")#คำสั่งสิ้นคิดของ Programmer\n",
+        "#this is edit by joey"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -59,7 +59,7 @@
       "source": [
         "import pandas as pd\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
