--- a/8_puzzle_main.ipynb
+++ b/8_puzzle_main.ipynb
@@ -38,7 +38,9 @@
       "source": [
         "print(\"Hi\")\n",
         "print(\"Hello\")#คำสั่งสิ้นคิดของ Programmer\n",
-        "#this is edit by joey"
+        "#this is edit by joey\n",
+        "print(\"Hi\")\n",
+        "print(\"Hello\")"
       ],
       "execution_count": null,
       "outputs": [
