--- a/8_puzzle_main.ipynb
+++ b/8_puzzle_main.ipynb
@@ -36,11 +36,16 @@
         "outputId": "c5699eb2-eeb2-4188-8bf6-2a93660e354b"
       },
       "source": [
-        "print(\"Hi\")\n",
-        "print(\"Hello\")#คำสั่งสิ้นคิดของ Programmer\n",
-        "#this is edit by joey\n",
-        "print(\"Hi\")\n",
-        "print(\"Hello\")"
+        "def shuffle():\n",
+        "  pass\n",
+        "\n",
+        "def possible_dir():\n",
+        "  pass\n",
+        "\n",
+        "def move():\n",
+        "  pass\n",
+        "\n",
+        "def "
       ],
       "execution_count": null,
       "outputs": [
@@ -59,7 +64,7 @@
         "id": "P8gQHHYT8NwC"
       },
       "source": [
-        "import pandas as pd\n"
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
