--- a/8_puzzle_main.ipynb
+++ b/8_puzzle_main.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Bowasia/8-puzzle-solver/blob/main/8_puzzle_main.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Bowasia/8-puzzle-solver/blob/Joey/8_puzzle_main.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -64,7 +64,7 @@
         "id": "P8gQHHYT8NwC"
       },
       "source": [
-        "\n"
+        "print(\"Hello, This is branch JOEY\")\n"
       ],
       "execution_count": null,
       "outputs": []
