--- a/8_puzzle_main.ipynb
+++ b/8_puzzle_main.ipynb
@@ -33,52 +33,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QJg4JCpp6XCe",
-        "outputId": "c5699eb2-eeb2-4188-8bf6-2a93660e354b"
+        "outputId": "dd66efdd-b170-4059-8117-15bd86b0b47e"
       },
       "source": [
-        "def shuffle():\n",
-        "  pass\n",
-        "\n",
-        "def possible_dir():\n",
-        "  pass\n",
-        "\n",
-        "def move():\n",
-        "  pass\n",
-        "\n",
-        "def "
+        "print(\"Test000\")"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hi\n"
+            "Test000\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "P8gQHHYT8NwC"
-      },
-      "source": [
-        "print(\"Hello, This is branch JOEY\")\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "4OPhjIuW8Vy7"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
