--- a/8_puzzle_main.ipynb
+++ b/8_puzzle_main.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Bowasia/8-puzzle-solver/blob/main/8_puzzle_main.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Bowasia/8-puzzle-solver/blob/Toto/8_puzzle_main.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -36,16 +36,7 @@
         "outputId": "c5699eb2-eeb2-4188-8bf6-2a93660e354b"
       },
       "source": [
-        "def shuffle():\n",
-        "  pass\n",
-        "\n",
-        "def possible_dir():\n",
-        "  pass\n",
-        "\n",
-        "def move():\n",
-        "  pass\n",
-        "\n",
-        "def "
+        "#ttotdgdfgdf"
       ],
       "execution_count": null,
       "outputs": [
