some distinguishable functions

--- a/8_puzzle_main.ipynb
+++ b/8_puzzle_main.ipynb
@@ -29,14 +29,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "QJg4JCpp6XCe",
-        "outputId": "c5699eb2-eeb2-4188-8bf6-2a93660e354b"
+        "id": "QJg4JCpp6XCe"
       },
       "source": [
         "def shuffle():\n",
+        "  \"\"\"\n",
+        "  If possible, generate initial condition\n",
+        "  \"\"\"\n",
         "  pass\n",
         "\n",
         "def possible_dir():\n",
@@ -45,18 +44,21 @@
         "def move():\n",
         "  pass\n",
         "\n",
-        "def "
+        "def h_score():\n",
+        "  \"\"\" \n",
+        "  different between current and final state \n",
+        "  \"\"\"\n",
+        "  pass\n",
+        "\n",
+        "def g_score():\n",
+        "  \"\"\"\n",
+        "  step accumulate from the beginning until current state\n",
+        "  \"\"\"\n",
+        "  pass\n",
+        "\n"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hi\n"
-          ]
-        }
-      ]
+      "execution_count": 2,
+      "outputs": []
     },
     {
       "cell_type": "code",
