--- a/8_puzzle_main.ipynb
+++ b/8_puzzle_main.ipynb
@@ -38,15 +38,60 @@
         "  \"\"\"\n",
         "  pass\n",
         "\n",
-        "def possible_dir():\n",
+        "#Project begins here#\n",
+        "\n",
+        "def solve():\n",
+        "  \"\"\"\n",
+        "  execute function\n",
+        "  input = \"024163587\"\n",
+        "    |\n",
+        "    v\n",
+        "  0 2 4\n",
+        "  1 6 3\n",
+        "  5 8 7\n",
+        "  where 0 represent blank space\n",
+        "\n",
+        "  output <- should tell the user how to move the puzzle\n",
+        "  so, It might be in this form\n",
+        "\n",
+        "  Step 1: LEFT\n",
+        "  2 0 4\n",
+        "  1 6 3\n",
+        "  5 8 7\n",
+        "    |\n",
+        "  Step 2: UP\n",
+        "  2 6 4\n",
+        "  1 0 3\n",
+        "  5 8 7\n",
+        "  \"\"\"\n",
         "  pass\n",
         "\n",
-        "def move():\n",
+        "def possible_dir():\n",
+        "  \"\"\"\n",
+        "  input = \"024163587\"\n",
+        "  0 2 4\n",
+        "  1 6 3\n",
+        "  5 8 7\n",
+        "  So, possible move according to user\n",
+        "  = RIGHT, DOWN \n",
+        "  output = [\"RIGHT\",\"DOWN\"]\n",
+        "  \"\"\"\n",
+        "  pass\n",
+        "\n",
+        "def gen_state(state, possible_dir):\n",
+        "  \"\"\"\n",
+        "  input = \"024163587\", [\"RIGHT\", \"DOWN\"]\n",
+        "  0 2 4\n",
+        "  1 6 3\n",
+        "  5 8 7\n",
+        "  output = [\"]\n",
+        "  \"\"\"\n",
         "  pass\n",
         "\n",
         "def h_score():\n",
         "  \"\"\" \n",
         "  different between current and final state \n",
+        "\n",
         "  \"\"\"\n",
         "  pass\n",
         "\n",
