working on possible direction

--- a/8_puzzle_main.ipynb
+++ b/8_puzzle_main.ipynb
@@ -40,6 +40,8 @@
         "\n",
         "#Project begins here#\n",
         "\n",
+        "import random\n",
+        "\n",
         "def solve():\n",
         "  \"\"\"\n",
         "  execute function\n",
@@ -66,7 +68,7 @@
         "  \"\"\"\n",
         "  pass\n",
         "\n",
-        "def possible_dir():\n",
+        "def possible_dir(puzzle):\n",
         "  \"\"\"\n",
         "  input = \"024163587\"\n",
         "  0 2 4\n",
@@ -76,15 +78,17 @@
         "  = RIGHT, DOWN \n",
         "  output = [\"RIGHT\",\"DOWN\"]\n",
         "  \"\"\"\n",
+        "\n",
+        "\n",
         "  pass\n",
         "\n",
-        "def gen_state(state, possible_dir):\n",
+        "def gen_state(puzzle, possible_dir):\n",
         "  \"\"\"\n",
         "  input = \"024163587\", [\"RIGHT\", \"DOWN\"]\n",
         "  0 2 4\n",
         "  1 6 3\n",
         "  5 8 7\n",
-        "  output = [\"]\n",
+        "  output = [\"204163587\",\"124063587\"]\n",
         "  \"\"\"\n",
         "  pass\n",
         "\n",
@@ -102,19 +106,54 @@
         "  pass\n",
         "\n"
       ],
-      "execution_count": 2,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "P8gQHHYT8NwC"
+        "id": "P8gQHHYT8NwC",
+        "outputId": "dce286a7-0520-4289-a59d-a6a1154c6399",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "\n"
+        "def possible_dir(puzzle):\n",
+        "  \"\"\"\n",
+        "  input = \"024163587\"\n",
+        "  0 2 4\n",
+        "  1 6 3\n",
+        "  5 8 7\n",
+        "  So, possible move according to user\n",
+        "  = RIGHT, DOWN \n",
+        "  output = [\"RIGHT\",\"DOWN\"]\n",
+        "  \"\"\"\n",
+        "  puzzle = \"678678\"\n",
+        "  return puzzle\n",
+        "\n",
+        "\n",
+        "a = [\"0\", \"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\"]\n",
+        "random.shuffle(a)\n",
+        "puzzle = \"\".join(a)\n",
+        "#print(puzzle)\n",
+        "\n",
+        "t = \"248306715\"\n",
+        "print(possible_dir(t))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "756281340\n",
+            "248306715\n",
+            "678678\n",
+            "248306715\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
