possible_dir & print puzzle checked!

--- a/8_puzzle_main.ipynb
+++ b/8_puzzle_main.ipynb
@@ -68,7 +68,7 @@
         "  \"\"\"\n",
         "  pass\n",
         "\n",
-        "def possible_dir(puzzle):\n",
+        "def possible_dir(puzzle): # DONE!!!\n",
         "  \"\"\"\n",
         "  input = \"024163587\"\n",
         "  0 2 4\n",
@@ -79,8 +79,27 @@
         "  output = [\"RIGHT\",\"DOWN\"]\n",
         "  \"\"\"\n",
         "\n",
+        "  # Find index of 0 i x j\n",
+        "  index = puzzle.find(\"0\")\n",
+        "  i = index // 3\n",
+        "  j = index - i * 3\n",
+        "  print(\"i = \" , i , \" j = \" ,j)\n",
         "\n",
-        "  pass\n",
+        "  # Find possible direction 0 can move\n",
+        "  map = [(-1,0),(1,0),(0,-1),(0,1)] # UP DOWN LEFT RIGHT respectively [direction according to the 8 puzzle on the website]\n",
+        "  result = []\n",
+        "  dir = {\n",
+        "      (-1,0) : \"UP\",\n",
+        "      (1,0)  : \"DOWN\",\n",
+        "      (0,-1) : \"LEFT\",\n",
+        "      (0,1)  : \"RIGHT\"\n",
+        "  }\n",
+        "  \n",
+        "  for k in map:\n",
+        "    if not ((i+k[0] < 0) or (i+k[0] > 2) or (j+k[1] < 0) or (j+k[1] > 2)):\n",
+        "      result.append(dir[k])\n",
+        "\n",
+        "  return result \n",
         "\n",
         "def gen_state(puzzle, possible_dir):\n",
         "  \"\"\"\n",
@@ -104,33 +123,27 @@
         "  step accumulate from the beginning until current state\n",
         "  \"\"\"\n",
         "  pass\n",
+        "\n",
+        "def show_puzzle(puzzle): # DONE!!!\n",
+        "  \"\"\" Print puzzle in more understandable way lol \"\"\"\n",
+        "  for i in range(0,9,3):\n",
+        "    print(puzzle[i] + \" \" + puzzle[i+1] + \" \" + puzzle[i+2])\n",
         "\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "P8gQHHYT8NwC",
-        "outputId": "dce286a7-0520-4289-a59d-a6a1154c6399",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cec7a4e9-d93f-4e6c-a468-8cd5c9e53326"
       },
       "source": [
-        "def possible_dir(puzzle):\n",
-        "  \"\"\"\n",
-        "  input = \"024163587\"\n",
-        "  0 2 4\n",
-        "  1 6 3\n",
-        "  5 8 7\n",
-        "  So, possible move according to user\n",
-        "  = RIGHT, DOWN \n",
-        "  output = [\"RIGHT\",\"DOWN\"]\n",
-        "  \"\"\"\n",
-        "  puzzle = \"678678\"\n",
-        "  return puzzle\n",
+        "\n",
         "\n",
         "\n",
         "a = [\"0\", \"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\"]\n",
@@ -138,19 +151,23 @@
         "puzzle = \"\".join(a)\n",
         "#print(puzzle)\n",
         "\n",
-        "t = \"248306715\"\n",
-        "print(possible_dir(t))"
+        "def checkPosDir(puzzle):\n",
+        "  show_puzzle(puzzle)\n",
+        "  print(possible_dir(puzzle))\n",
+        "\n",
+        "checkPosDir(puzzle)"
       ],
-      "execution_count": 18,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "756281340\n",
-            "248306715\n",
-            "678678\n",
-            "248306715\n"
+            "7 0 3\n",
+            "8 2 4\n",
+            "1 6 5\n",
+            "i =  0  j =  1\n",
+            "['DOWN', 'LEFT', 'RIGHT']\n"
           ]
         }
       ]
