gen_state checked! & separate zeroIndx function

--- a/8_puzzle_main.ipynb
+++ b/8_puzzle_main.ipynb
@@ -68,6 +68,14 @@
         "  \"\"\"\n",
         "  pass\n",
         "\n",
+        "def zeroIndx(puzzle):\n",
+        "  \"\"\" Find index of 0 i x j \"\"\"\n",
+        "  index = puzzle.find(\"0\")\n",
+        "  i = index // 3\n",
+        "  j = index - i * 3\n",
+        "  #print(\"i = \" , i , \" j = \" ,j)\n",
+        "  return i,j\n",
+        "\n",
         "def possible_dir(puzzle): # DONE!!!\n",
         "  \"\"\"\n",
         "  input = \"024163587\"\n",
@@ -78,12 +86,8 @@
         "  = RIGHT, DOWN \n",
         "  output = [\"RIGHT\",\"DOWN\"]\n",
         "  \"\"\"\n",
-        "\n",
-        "  # Find index of 0 i x j\n",
-        "  index = puzzle.find(\"0\")\n",
-        "  i = index // 3\n",
-        "  j = index - i * 3\n",
-        "  print(\"i = \" , i , \" j = \" ,j)\n",
+        "  i,j = zeroIndx(puzzle) \n",
+        "  \n",
         "\n",
         "  # Find possible direction 0 can move\n",
         "  map = [(-1,0),(1,0),(0,-1),(0,1)] # UP DOWN LEFT RIGHT respectively [direction according to the 8 puzzle on the website]\n",
@@ -109,7 +113,52 @@
         "  5 8 7\n",
         "  output = [\"204163587\",\"124063587\"]\n",
         "  \"\"\"\n",
-        "  pass\n",
+        "  dir = {\n",
+        "      \"UP\"    : (-1,0),\n",
+        "      \"DOWN\"  : (1,0),\n",
+        "      \"LEFT\"  : (0,-1),\n",
+        "      \"RIGHT\" : (0,1)\n",
+        "  }\n",
+        "\n",
+        "  # get 0 coordinate\n",
+        "  i,j = zeroIndx(puzzle)\n",
+        "  \n",
+        "  # get possible dir coordinate\n",
+        "  move_to = []\n",
+        "  for d in possible_dir:\n",
+        "    move_to.append((i+dir[d][0],j+dir[d][1]))\n",
+        "  #print(move_to)\n",
+        "\n",
+        "  # generate output\n",
+        "  new_puzzle = []\n",
+        "  for p in move_to:\n",
+        "\n",
+        "    # turn string puzzle into list form\n",
+        "    puzzle_list = []\n",
+        "    for a in puzzle:\n",
+        "      puzzle_list.append(a)\n",
+        "\n",
+        "    # turn coordinates into index\n",
+        "    blank_indx = i * 3 + j\n",
+        "    dest_indx = p[0] * 3 + p[1]\n",
+        "\n",
+        "    # swap position of blank space and possible direction\n",
+        "    puzzle_list[blank_indx],puzzle_list[dest_indx] = puzzle_list[dest_indx],puzzle_list[blank_indx]\n",
+        "    \n",
+        "    # turn new puzzle into string form\n",
+        "    new_puzzle.append(\"\".join(puzzle_list))\n",
+        "  \n",
+        "  # check\n",
+        "  \"\"\"\n",
+        "  print(new_puzzle)\n",
+        "  for b in range(len(possible_dir)):\n",
+        "    print(\"\\n\" + possible_dir[b])\n",
+        "    show_puzzle(new_puzzle[b])\n",
+        "  \"\"\"\n",
+        "  return new_puzzle\n",
+        "\n",
+        "\n",
+        "  \n",
         "\n",
         "def h_score():\n",
         "  \"\"\" \n",
@@ -128,9 +177,10 @@
         "  \"\"\" Print puzzle in more understandable way lol \"\"\"\n",
         "  for i in range(0,9,3):\n",
         "    print(puzzle[i] + \" \" + puzzle[i+1] + \" \" + puzzle[i+2])\n",
+        "\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -140,7 +190,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cec7a4e9-d93f-4e6c-a468-8cd5c9e53326"
+        "outputId": "47887e41-b49d-4eb2-f4a8-20467a3f9192"
       },
       "source": [
         "\n",
@@ -151,24 +201,52 @@
         "puzzle = \"\".join(a)\n",
         "#print(puzzle)\n",
         "\n",
+        "\n",
+        "\n",
         "def checkPosDir(puzzle):\n",
         "  show_puzzle(puzzle)\n",
         "  print(possible_dir(puzzle))\n",
         "\n",
-        "checkPosDir(puzzle)"
+        "checkPosDir(puzzle)\n",
+        "gen_state(puzzle,possible_dir(puzzle))\n"
       ],
-      "execution_count": 49,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "7 0 3\n",
-            "8 2 4\n",
-            "1 6 5\n",
-            "i =  0  j =  1\n",
-            "['DOWN', 'LEFT', 'RIGHT']\n"
+            "6 2 3\n",
+            "1 5 0\n",
+            "8 4 7\n",
+            "['UP', 'DOWN', 'LEFT']\n",
+            "['620153847', '623157840', '623105847']\n",
+            "\n",
+            "UP\n",
+            "6 2 0\n",
+            "1 5 3\n",
+            "8 4 7\n",
+            "\n",
+            "DOWN\n",
+            "6 2 3\n",
+            "1 5 7\n",
+            "8 4 0\n",
+            "\n",
+            "LEFT\n",
+            "6 2 3\n",
+            "1 0 5\n",
+            "8 4 7\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['620153847', '623157840', '623105847']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
         }
       ]
     },
