--- a/8_puzzle_main.ipynb
+++ b/8_puzzle_main.ipynb
@@ -157,15 +157,21 @@
         "  \"\"\"\n",
         "  return new_puzzle\n",
         "\n",
-        "\n",
-        "  \n",
-        "\n",
-        "def h_score():\n",
+        "def h_score(puzzle,goal):\n",
         "  \"\"\" \n",
         "  different between current and final state \n",
+        "  input = \"024163587\",\"123456780\"\n",
+        "  0 2 4   1 2 3\n",
+        "  1 6 3   4 5 6\n",
+        "  5 8 7   7 8 9\n",
+        "  output = 7\n",
         "\n",
         "  \"\"\"\n",
-        "  pass\n",
+        "  h_point = 0\n",
+        "  for i in range(len(puzzle)):\n",
+        "    if puzzle[i] != goal[i]:\n",
+        "      h_point += 1\n",
+        "  return h_point\n",
         "\n",
         "def g_score():\n",
         "  \"\"\"\n",
@@ -180,7 +186,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 31,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -190,7 +196,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "47887e41-b49d-4eb2-f4a8-20467a3f9192"
+        "outputId": "bcbef08f-98f3-43bd-f48a-f3a8ef88e4f0"
       },
       "source": [
         "\n",
@@ -208,45 +214,33 @@
         "  print(possible_dir(puzzle))\n",
         "\n",
         "checkPosDir(puzzle)\n",
-        "gen_state(puzzle,possible_dir(puzzle))\n"
+        "gen_state(puzzle,possible_dir(puzzle))\n",
+        "\n",
+        "\n",
+        "\n",
+        "h_score(\"024163587\",\"123456780\")\n"
       ],
-      "execution_count": 33,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "6 2 3\n",
-            "1 5 0\n",
-            "8 4 7\n",
-            "['UP', 'DOWN', 'LEFT']\n",
-            "['620153847', '623157840', '623105847']\n",
-            "\n",
-            "UP\n",
-            "6 2 0\n",
-            "1 5 3\n",
-            "8 4 7\n",
-            "\n",
-            "DOWN\n",
-            "6 2 3\n",
-            "1 5 7\n",
-            "8 4 0\n",
-            "\n",
-            "LEFT\n",
-            "6 2 3\n",
-            "1 0 5\n",
-            "8 4 7\n"
+            "3 7 6\n",
+            "1 0 4\n",
+            "2 5 8\n",
+            "['UP', 'DOWN', 'LEFT', 'RIGHT']\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['620153847', '623157840', '623105847']"
+              "7"
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 5
         }
       ]
     },
