--- a/8_puzzle_main.ipynb
+++ b/8_puzzle_main.ipynb
@@ -68,9 +68,9 @@
         "  \"\"\"\n",
         "  pass\n",
         "\n",
-        "def zeroIndx(puzzle):\n",
+        "def findIndx(puzzle,num):\n",
         "  \"\"\" Find index of 0 i x j \"\"\"\n",
-        "  index = puzzle.find(\"0\")\n",
+        "  index = puzzle.find(num)\n",
         "  i = index // 3\n",
         "  j = index - i * 3\n",
         "  #print(\"i = \" , i , \" j = \" ,j)\n",
@@ -86,9 +86,8 @@
         "  = RIGHT, DOWN \n",
         "  output = [\"RIGHT\",\"DOWN\"]\n",
         "  \"\"\"\n",
-        "  i,j = zeroIndx(puzzle) \n",
+        "  i,j = findIndx(puzzle,\"0\") \n",
         "  \n",
-        "\n",
         "  # Find possible direction 0 can move\n",
         "  map = [(-1,0),(1,0),(0,-1),(0,1)] # UP DOWN LEFT RIGHT respectively [direction according to the 8 puzzle on the website]\n",
         "  result = []\n",
@@ -121,7 +120,7 @@
         "  }\n",
         "\n",
         "  # get 0 coordinate\n",
-        "  i,j = zeroIndx(puzzle)\n",
+        "  i,j = findIndx(puzzle,\"0\")\n",
         "  \n",
         "  # get possible dir coordinate\n",
         "  move_to = []\n",
@@ -163,14 +162,19 @@
         "  input = \"024163587\",\"123456780\"\n",
         "  0 2 4   1 2 3\n",
         "  1 6 3   4 5 6\n",
-        "  5 8 7   7 8 9\n",
+        "  5 8 7   7 8 0\n",
         "  output = 7\n",
         "\n",
         "  \"\"\"\n",
         "  h_point = 0\n",
-        "  for i in range(len(puzzle)):\n",
-        "    if puzzle[i] != goal[i]:\n",
-        "      h_point += 1\n",
+        "\n",
+        "  for num in range(len(puzzle)):\n",
+        "    i,j = findIndx(puzzle,str(num))\n",
+        "    x,y = findIndx(goal,str(num))\n",
+        "\n",
+        "    h = abs(i-x) + abs(j-y)\n",
+        "    h_point += h\n",
+        "\n",
         "  return h_point\n",
         "\n",
         "def g_score():\n",
@@ -186,7 +190,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 1,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -196,19 +200,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bcbef08f-98f3-43bd-f48a-f3a8ef88e4f0"
+        "outputId": "d97bf403-9a80-4f06-c2dd-4291663240a8"
       },
       "source": [
-        "\n",
-        "\n",
         "\n",
         "a = [\"0\", \"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\"]\n",
         "random.shuffle(a)\n",
         "puzzle = \"\".join(a)\n",
         "#print(puzzle)\n",
-        "\n",
-        "\n",
-        "\n",
+        "goal = \"123456780\"\n",
         "def checkPosDir(puzzle):\n",
         "  show_puzzle(puzzle)\n",
         "  print(possible_dir(puzzle))\n",
@@ -216,31 +216,31 @@
         "checkPosDir(puzzle)\n",
         "gen_state(puzzle,possible_dir(puzzle))\n",
         "\n",
+        "h_score(puzzle,goal)\n",
         "\n",
-        "\n",
-        "h_score(\"024163587\",\"123456780\")\n"
+        "\n"
       ],
-      "execution_count": 5,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "3 7 6\n",
-            "1 0 4\n",
-            "2 5 8\n",
-            "['UP', 'DOWN', 'LEFT', 'RIGHT']\n"
+            "4 5 2\n",
+            "1 6 0\n",
+            "7 3 8\n",
+            "['UP', 'DOWN', 'LEFT']\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "7"
+              "10"
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 21
         }
       ]
     },
