--- a/8_puzzle_main.ipynb
+++ b/8_puzzle_main.ipynb
@@ -110,7 +110,7 @@
         "  0 2 4\n",
         "  1 6 3\n",
         "  5 8 7\n",
-        "  output = [\"204163587\",\"124063587\"]\n",
+        "  output = [[\"204163587\",\"RIGHT\"],[\"124063587\",\"DOWN\"]]\n",
         "  \"\"\"\n",
         "  dir = {\n",
         "      \"UP\"    : (-1,0),\n",
@@ -146,6 +146,10 @@
         "    \n",
         "    # turn new puzzle into string form\n",
         "    new_puzzle.append(\"\".join(puzzle_list))\n",
+        "    \n",
+        "    result = []\n",
+        "    for item in range(len(new_puzzle)):\n",
+        "      result.append([new_puzzle[item],possible_dir[item]])\n",
         "  \n",
         "  # check\n",
         "  \"\"\"\n",
@@ -154,7 +158,7 @@
         "    print(\"\\n\" + possible_dir[b])\n",
         "    show_puzzle(new_puzzle[b])\n",
         "  \"\"\"\n",
-        "  return new_puzzle\n",
+        "  return result\n",
         "\n",
         "def f_score(puzzle, goal):\n",
         "\n",
@@ -182,7 +186,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 30,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -192,7 +196,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ed74478a-d272-4733-92df-5bf3ce339ea7"
+        "outputId": "76dfcdff-06bf-4fb3-8ae0-02618f3bad5a"
       },
       "source": [
         "\n",
@@ -200,48 +204,136 @@
         "random.shuffle(a)\n",
         "puzzle = \"\".join(a)\n",
         "goal = \"123456780\"\n",
+        "puzzle = \"156042837\"\n",
+        "puzzle = \"123405678\"\n",
+        "#puzzle = \"152703468\"\n",
+        "\n",
         "\n",
         "def check(puzzle):\n",
         "  show_puzzle(puzzle)\n",
         "  print(possible_dir(puzzle))\n",
         "  print(gen_state(puzzle,possible_dir(puzzle)))\n",
         "  \n",
-        "check(puzzle)\n",
+        "#check(puzzle)\n",
         "\n",
-        "print(f_score(puzzle,goal))\n",
+        "#print(f_score(puzzle,goal))\n",
         "\n",
         "\"\"\"\n",
         "findIndx(puzzle,num) -> output as an i,j coordinate\n",
         "\n",
         "possible_dir(puzzle) -> [\"RIGHT\",\"DOWN\"]\n",
         "gen_state(puzzle,possible_dir) -> input the list output the list of state\n",
-        "h_score(puzzle,goal)  -> h_score\n",
+        "f_score(puzzle,goal)  -> f_score\n",
         "\"\"\"\n",
         "\n",
-        "def solve(puzzle, goal):\n",
+        "def solve(start, goal):\n",
+        "  puzzle = start[:]\n",
+        "  seq = []\n",
+        "  pre = findIndx(puzzle,\"0\")\n",
         "\n",
-        "  sequence = []\n",
-        "  \n",
+        "  while puzzle != goal:\n",
+        "    \n",
+        "    # check repeated pattern\n",
+        "    move = gen_state(puzzle,possible_dir(puzzle))\n",
+        "    print(\"befor remove \",move)\n",
+        "    for item in seq:\n",
+        "      for dir in move:\n",
+        "        repeat = item[0] == dir[0]\n",
+        "        if repeat:\n",
+        "          move.remove(dir)\n",
+        "    print(\"After remove \",move)\n",
+        "    \n",
+        "    # Find the least f score\n",
+        "    least_score = 0\n",
+        "    if len(move) != 1:\n",
+        "      for s in range(len(move)-1):\n",
+        "        if f_score(move[s][0],goal) > f_score(move[s+1][0],goal):\n",
+        "          least_score = s + 1\n",
+        "    #print(\"least_score \",least_score)\n",
+        "    seq.append(move[least_score])\n",
+        "    puzzle = move[least_score][0]\n",
+        "    print(seq)\n",
+        "\n",
+        "  return seq\n",
+        " \n",
         "\n",
         "\n",
-        "\n",
-        "solve(goal, goal)\n",
+        "solve(puzzle, goal)\n",
         "\n",
         "\n"
       ],
-      "execution_count": 32,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "4 5 8\n",
-            "2 1 7\n",
-            "3 0 6\n",
-            "['UP', 'LEFT', 'RIGHT']\n",
-            "['458207316', '458217036', '458217360']\n",
-            "27\n"
+            "befor remove  [['103425678', 'UP'], ['123475608', 'DOWN'], ['123045678', 'LEFT'], ['123450678', 'RIGHT']]\n",
+            "After remove  [['103425678', 'UP'], ['123475608', 'DOWN'], ['123045678', 'LEFT'], ['123450678', 'RIGHT']]\n",
+            "[['123450678', 'RIGHT']]\n",
+            "befor remove  [['120453678', 'UP'], ['123458670', 'DOWN'], ['123405678', 'LEFT']]\n",
+            "After remove  [['120453678', 'UP'], ['123458670', 'DOWN'], ['123405678', 'LEFT']]\n",
+            "[['123450678', 'RIGHT'], ['123458670', 'DOWN']]\n",
+            "befor remove  [['123450678', 'UP'], ['123458607', 'LEFT']]\n",
+            "After remove  [['123458607', 'LEFT']]\n",
+            "[['123450678', 'RIGHT'], ['123458670', 'DOWN'], ['123458607', 'LEFT']]\n",
+            "befor remove  [['123408657', 'UP'], ['123458067', 'LEFT'], ['123458670', 'RIGHT']]\n",
+            "After remove  [['123408657', 'UP'], ['123458067', 'LEFT']]\n",
+            "[['123450678', 'RIGHT'], ['123458670', 'DOWN'], ['123458607', 'LEFT'], ['123458067', 'LEFT']]\n",
+            "befor remove  [['123058467', 'UP'], ['123458607', 'RIGHT']]\n",
+            "After remove  [['123058467', 'UP']]\n",
+            "[['123450678', 'RIGHT'], ['123458670', 'DOWN'], ['123458607', 'LEFT'], ['123458067', 'LEFT'], ['123058467', 'UP']]\n",
+            "befor remove  [['023158467', 'UP'], ['123458067', 'DOWN'], ['123508467', 'RIGHT']]\n",
+            "After remove  [['023158467', 'UP'], ['123508467', 'RIGHT']]\n",
+            "[['123450678', 'RIGHT'], ['123458670', 'DOWN'], ['123458607', 'LEFT'], ['123458067', 'LEFT'], ['123058467', 'UP'], ['123508467', 'RIGHT']]\n",
+            "befor remove  [['103528467', 'UP'], ['123568407', 'DOWN'], ['123058467', 'LEFT'], ['123580467', 'RIGHT']]\n",
+            "After remove  [['103528467', 'UP'], ['123568407', 'DOWN'], ['123580467', 'RIGHT']]\n",
+            "[['123450678', 'RIGHT'], ['123458670', 'DOWN'], ['123458607', 'LEFT'], ['123458067', 'LEFT'], ['123058467', 'UP'], ['123508467', 'RIGHT'], ['123568407', 'DOWN']]\n",
+            "befor remove  [['123508467', 'UP'], ['123568047', 'LEFT'], ['123568470', 'RIGHT']]\n",
+            "After remove  [['123568047', 'LEFT'], ['123568470', 'RIGHT']]\n",
+            "[['123450678', 'RIGHT'], ['123458670', 'DOWN'], ['123458607', 'LEFT'], ['123458067', 'LEFT'], ['123058467', 'UP'], ['123508467', 'RIGHT'], ['123568407', 'DOWN'], ['123568470', 'RIGHT']]\n",
+            "befor remove  [['123560478', 'UP'], ['123568407', 'LEFT']]\n",
+            "After remove  [['123560478', 'UP']]\n",
+            "[['123450678', 'RIGHT'], ['123458670', 'DOWN'], ['123458607', 'LEFT'], ['123458067', 'LEFT'], ['123058467', 'UP'], ['123508467', 'RIGHT'], ['123568407', 'DOWN'], ['123568470', 'RIGHT'], ['123560478', 'UP']]\n",
+            "befor remove  [['120563478', 'UP'], ['123568470', 'DOWN'], ['123506478', 'LEFT']]\n",
+            "After remove  [['120563478', 'UP'], ['123506478', 'LEFT']]\n",
+            "[['123450678', 'RIGHT'], ['123458670', 'DOWN'], ['123458607', 'LEFT'], ['123458067', 'LEFT'], ['123058467', 'UP'], ['123508467', 'RIGHT'], ['123568407', 'DOWN'], ['123568470', 'RIGHT'], ['123560478', 'UP'], ['123506478', 'LEFT']]\n",
+            "befor remove  [['103526478', 'UP'], ['123576408', 'DOWN'], ['123056478', 'LEFT'], ['123560478', 'RIGHT']]\n",
+            "After remove  [['103526478', 'UP'], ['123576408', 'DOWN'], ['123056478', 'LEFT']]\n",
+            "[['123450678', 'RIGHT'], ['123458670', 'DOWN'], ['123458607', 'LEFT'], ['123458067', 'LEFT'], ['123058467', 'UP'], ['123508467', 'RIGHT'], ['123568407', 'DOWN'], ['123568470', 'RIGHT'], ['123560478', 'UP'], ['123506478', 'LEFT'], ['123056478', 'LEFT']]\n",
+            "befor remove  [['023156478', 'UP'], ['123456078', 'DOWN'], ['123506478', 'RIGHT']]\n",
+            "After remove  [['023156478', 'UP'], ['123456078', 'DOWN']]\n",
+            "[['123450678', 'RIGHT'], ['123458670', 'DOWN'], ['123458607', 'LEFT'], ['123458067', 'LEFT'], ['123058467', 'UP'], ['123508467', 'RIGHT'], ['123568407', 'DOWN'], ['123568470', 'RIGHT'], ['123560478', 'UP'], ['123506478', 'LEFT'], ['123056478', 'LEFT'], ['123456078', 'DOWN']]\n",
+            "befor remove  [['123056478', 'UP'], ['123456708', 'RIGHT']]\n",
+            "After remove  [['123456708', 'RIGHT']]\n",
+            "[['123450678', 'RIGHT'], ['123458670', 'DOWN'], ['123458607', 'LEFT'], ['123458067', 'LEFT'], ['123058467', 'UP'], ['123508467', 'RIGHT'], ['123568407', 'DOWN'], ['123568470', 'RIGHT'], ['123560478', 'UP'], ['123506478', 'LEFT'], ['123056478', 'LEFT'], ['123456078', 'DOWN'], ['123456708', 'RIGHT']]\n",
+            "befor remove  [['123406758', 'UP'], ['123456078', 'LEFT'], ['123456780', 'RIGHT']]\n",
+            "After remove  [['123406758', 'UP'], ['123456780', 'RIGHT']]\n",
+            "[['123450678', 'RIGHT'], ['123458670', 'DOWN'], ['123458607', 'LEFT'], ['123458067', 'LEFT'], ['123058467', 'UP'], ['123508467', 'RIGHT'], ['123568407', 'DOWN'], ['123568470', 'RIGHT'], ['123560478', 'UP'], ['123506478', 'LEFT'], ['123056478', 'LEFT'], ['123456078', 'DOWN'], ['123456708', 'RIGHT'], ['123456780', 'RIGHT']]\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[['123450678', 'RIGHT'],\n",
+              " ['123458670', 'DOWN'],\n",
+              " ['123458607', 'LEFT'],\n",
+              " ['123458067', 'LEFT'],\n",
+              " ['123058467', 'UP'],\n",
+              " ['123508467', 'RIGHT'],\n",
+              " ['123568407', 'DOWN'],\n",
+              " ['123568470', 'RIGHT'],\n",
+              " ['123560478', 'UP'],\n",
+              " ['123506478', 'LEFT'],\n",
+              " ['123056478', 'LEFT'],\n",
+              " ['123456078', 'DOWN'],\n",
+              " ['123456708', 'RIGHT'],\n",
+              " ['123456780', 'RIGHT']]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 95
         }
       ]
     },
