--- a/8_puzzle_main.ipynb
+++ b/8_puzzle_main.ipynb
@@ -186,7 +186,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 47,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -196,7 +196,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "76dfcdff-06bf-4fb3-8ae0-02618f3bad5a"
+        "outputId": "d657c5f4-9d1f-4781-cb52-51edc668ad47"
       },
       "source": [
         "\n",
@@ -230,29 +230,33 @@
         "  puzzle = start[:]\n",
         "  seq = []\n",
         "  pre = findIndx(puzzle,\"0\")\n",
-        "\n",
+        "  c = 0\n",
         "  while puzzle != goal:\n",
         "    \n",
         "    # check repeated pattern\n",
         "    move = gen_state(puzzle,possible_dir(puzzle))\n",
-        "    print(\"befor remove \",move)\n",
+        "    #print(\"befor remove \",move)\n",
         "    for item in seq:\n",
         "      for dir in move:\n",
         "        repeat = item[0] == dir[0]\n",
         "        if repeat:\n",
         "          move.remove(dir)\n",
-        "    print(\"After remove \",move)\n",
+        "    #print(\"After remove \",move)\n",
         "    \n",
         "    # Find the least f score\n",
         "    least_score = 0\n",
         "    if len(move) != 1:\n",
         "      for s in range(len(move)-1):\n",
-        "        if f_score(move[s][0],goal) > f_score(move[s+1][0],goal):\n",
+        "        if f_score(move[s][0],goal) > f_score(move[s+1][0],goal): # fix this please ชนไม่ครบคู่\n",
         "          least_score = s + 1\n",
-        "    #print(\"least_score \",least_score)\n",
+        "    show_puzzle(move[least_score][0])\n",
+        "    print(\"\")\n",
+        "    print(c)\n",
+        "    c += 1\n",
         "    seq.append(move[least_score])\n",
         "    puzzle = move[least_score][0]\n",
-        "    print(seq)\n",
+        "    #print(seq)\n",
+        "    \n",
         "\n",
         "  return seq\n",
         " \n",
@@ -262,54 +266,82 @@
         "\n",
         "\n"
       ],
-      "execution_count": 95,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "befor remove  [['103425678', 'UP'], ['123475608', 'DOWN'], ['123045678', 'LEFT'], ['123450678', 'RIGHT']]\n",
-            "After remove  [['103425678', 'UP'], ['123475608', 'DOWN'], ['123045678', 'LEFT'], ['123450678', 'RIGHT']]\n",
-            "[['123450678', 'RIGHT']]\n",
-            "befor remove  [['120453678', 'UP'], ['123458670', 'DOWN'], ['123405678', 'LEFT']]\n",
-            "After remove  [['120453678', 'UP'], ['123458670', 'DOWN'], ['123405678', 'LEFT']]\n",
-            "[['123450678', 'RIGHT'], ['123458670', 'DOWN']]\n",
-            "befor remove  [['123450678', 'UP'], ['123458607', 'LEFT']]\n",
-            "After remove  [['123458607', 'LEFT']]\n",
-            "[['123450678', 'RIGHT'], ['123458670', 'DOWN'], ['123458607', 'LEFT']]\n",
-            "befor remove  [['123408657', 'UP'], ['123458067', 'LEFT'], ['123458670', 'RIGHT']]\n",
-            "After remove  [['123408657', 'UP'], ['123458067', 'LEFT']]\n",
-            "[['123450678', 'RIGHT'], ['123458670', 'DOWN'], ['123458607', 'LEFT'], ['123458067', 'LEFT']]\n",
-            "befor remove  [['123058467', 'UP'], ['123458607', 'RIGHT']]\n",
-            "After remove  [['123058467', 'UP']]\n",
-            "[['123450678', 'RIGHT'], ['123458670', 'DOWN'], ['123458607', 'LEFT'], ['123458067', 'LEFT'], ['123058467', 'UP']]\n",
-            "befor remove  [['023158467', 'UP'], ['123458067', 'DOWN'], ['123508467', 'RIGHT']]\n",
-            "After remove  [['023158467', 'UP'], ['123508467', 'RIGHT']]\n",
-            "[['123450678', 'RIGHT'], ['123458670', 'DOWN'], ['123458607', 'LEFT'], ['123458067', 'LEFT'], ['123058467', 'UP'], ['123508467', 'RIGHT']]\n",
-            "befor remove  [['103528467', 'UP'], ['123568407', 'DOWN'], ['123058467', 'LEFT'], ['123580467', 'RIGHT']]\n",
-            "After remove  [['103528467', 'UP'], ['123568407', 'DOWN'], ['123580467', 'RIGHT']]\n",
-            "[['123450678', 'RIGHT'], ['123458670', 'DOWN'], ['123458607', 'LEFT'], ['123458067', 'LEFT'], ['123058467', 'UP'], ['123508467', 'RIGHT'], ['123568407', 'DOWN']]\n",
-            "befor remove  [['123508467', 'UP'], ['123568047', 'LEFT'], ['123568470', 'RIGHT']]\n",
-            "After remove  [['123568047', 'LEFT'], ['123568470', 'RIGHT']]\n",
-            "[['123450678', 'RIGHT'], ['123458670', 'DOWN'], ['123458607', 'LEFT'], ['123458067', 'LEFT'], ['123058467', 'UP'], ['123508467', 'RIGHT'], ['123568407', 'DOWN'], ['123568470', 'RIGHT']]\n",
-            "befor remove  [['123560478', 'UP'], ['123568407', 'LEFT']]\n",
-            "After remove  [['123560478', 'UP']]\n",
-            "[['123450678', 'RIGHT'], ['123458670', 'DOWN'], ['123458607', 'LEFT'], ['123458067', 'LEFT'], ['123058467', 'UP'], ['123508467', 'RIGHT'], ['123568407', 'DOWN'], ['123568470', 'RIGHT'], ['123560478', 'UP']]\n",
-            "befor remove  [['120563478', 'UP'], ['123568470', 'DOWN'], ['123506478', 'LEFT']]\n",
-            "After remove  [['120563478', 'UP'], ['123506478', 'LEFT']]\n",
-            "[['123450678', 'RIGHT'], ['123458670', 'DOWN'], ['123458607', 'LEFT'], ['123458067', 'LEFT'], ['123058467', 'UP'], ['123508467', 'RIGHT'], ['123568407', 'DOWN'], ['123568470', 'RIGHT'], ['123560478', 'UP'], ['123506478', 'LEFT']]\n",
-            "befor remove  [['103526478', 'UP'], ['123576408', 'DOWN'], ['123056478', 'LEFT'], ['123560478', 'RIGHT']]\n",
-            "After remove  [['103526478', 'UP'], ['123576408', 'DOWN'], ['123056478', 'LEFT']]\n",
-            "[['123450678', 'RIGHT'], ['123458670', 'DOWN'], ['123458607', 'LEFT'], ['123458067', 'LEFT'], ['123058467', 'UP'], ['123508467', 'RIGHT'], ['123568407', 'DOWN'], ['123568470', 'RIGHT'], ['123560478', 'UP'], ['123506478', 'LEFT'], ['123056478', 'LEFT']]\n",
-            "befor remove  [['023156478', 'UP'], ['123456078', 'DOWN'], ['123506478', 'RIGHT']]\n",
-            "After remove  [['023156478', 'UP'], ['123456078', 'DOWN']]\n",
-            "[['123450678', 'RIGHT'], ['123458670', 'DOWN'], ['123458607', 'LEFT'], ['123458067', 'LEFT'], ['123058467', 'UP'], ['123508467', 'RIGHT'], ['123568407', 'DOWN'], ['123568470', 'RIGHT'], ['123560478', 'UP'], ['123506478', 'LEFT'], ['123056478', 'LEFT'], ['123456078', 'DOWN']]\n",
-            "befor remove  [['123056478', 'UP'], ['123456708', 'RIGHT']]\n",
-            "After remove  [['123456708', 'RIGHT']]\n",
-            "[['123450678', 'RIGHT'], ['123458670', 'DOWN'], ['123458607', 'LEFT'], ['123458067', 'LEFT'], ['123058467', 'UP'], ['123508467', 'RIGHT'], ['123568407', 'DOWN'], ['123568470', 'RIGHT'], ['123560478', 'UP'], ['123506478', 'LEFT'], ['123056478', 'LEFT'], ['123456078', 'DOWN'], ['123456708', 'RIGHT']]\n",
-            "befor remove  [['123406758', 'UP'], ['123456078', 'LEFT'], ['123456780', 'RIGHT']]\n",
-            "After remove  [['123406758', 'UP'], ['123456780', 'RIGHT']]\n",
-            "[['123450678', 'RIGHT'], ['123458670', 'DOWN'], ['123458607', 'LEFT'], ['123458067', 'LEFT'], ['123058467', 'UP'], ['123508467', 'RIGHT'], ['123568407', 'DOWN'], ['123568470', 'RIGHT'], ['123560478', 'UP'], ['123506478', 'LEFT'], ['123056478', 'LEFT'], ['123456078', 'DOWN'], ['123456708', 'RIGHT'], ['123456780', 'RIGHT']]\n"
+            "1 2 3\n",
+            "4 5 0\n",
+            "6 7 8\n",
+            "\n",
+            "0\n",
+            "1 2 3\n",
+            "4 5 8\n",
+            "6 7 0\n",
+            "\n",
+            "1\n",
+            "1 2 3\n",
+            "4 5 8\n",
+            "6 0 7\n",
+            "\n",
+            "2\n",
+            "1 2 3\n",
+            "4 5 8\n",
+            "0 6 7\n",
+            "\n",
+            "3\n",
+            "1 2 3\n",
+            "0 5 8\n",
+            "4 6 7\n",
+            "\n",
+            "4\n",
+            "1 2 3\n",
+            "5 0 8\n",
+            "4 6 7\n",
+            "\n",
+            "5\n",
+            "1 2 3\n",
+            "5 6 8\n",
+            "4 0 7\n",
+            "\n",
+            "6\n",
+            "1 2 3\n",
+            "5 6 8\n",
+            "4 7 0\n",
+            "\n",
+            "7\n",
+            "1 2 3\n",
+            "5 6 0\n",
+            "4 7 8\n",
+            "\n",
+            "8\n",
+            "1 2 3\n",
+            "5 0 6\n",
+            "4 7 8\n",
+            "\n",
+            "9\n",
+            "1 2 3\n",
+            "0 5 6\n",
+            "4 7 8\n",
+            "\n",
+            "10\n",
+            "1 2 3\n",
+            "4 5 6\n",
+            "0 7 8\n",
+            "\n",
+            "11\n",
+            "1 2 3\n",
+            "4 5 6\n",
+            "7 0 8\n",
+            "\n",
+            "12\n",
+            "1 2 3\n",
+            "4 5 6\n",
+            "7 8 0\n",
+            "\n",
+            "13\n"
           ]
         },
         {
@@ -333,7 +365,42 @@
             ]
           },
           "metadata": {},
-          "execution_count": 95
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uPw8RBkXXgJg",
+        "outputId": "0d6f4e65-343b-487c-c4cc-ebd8be2614fe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#\"013425678\"\n",
+        "\n",
+        "for i in gen_state(\"013425678\",possible_dir(\"013425678\")):\n",
+        "  \n",
+        "  show_puzzle(i[0])\n",
+        "  print(\"\")"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4 1 3\n",
+            "0 2 5\n",
+            "6 7 8\n",
+            "\n",
+            "1 0 3\n",
+            "4 2 5\n",
+            "6 7 8\n",
+            "\n"
+          ]
         }
       ]
     },
