--- a/8_puzzle_main.ipynb
+++ b/8_puzzle_main.ipynb
@@ -160,7 +160,7 @@
         "  \"\"\"\n",
         "  return result\n",
         "\n",
-        "def f_score(puzzle, goal):\n",
+        "def h_score(puzzle, goal):\n",
         "\n",
         "  h_point = 0\n",
         "  for num in range(len(puzzle)):\n",
@@ -170,12 +170,12 @@
         "    h = abs(i-x) + abs(j-y)\n",
         "    h_point += h\n",
         "  \n",
-        "  g_point = 0\n",
+        "  h2_point = 0\n",
         "  for n in range(len(puzzle)):\n",
         "    if puzzle[n] != goal[n]:\n",
-        "      g_point += 1\n",
+        "      h2_point += 1\n",
         "\n",
-        "  f_point = g_point + h_point\n",
+        "  f_point = h2_point + h_point\n",
         "  return f_point\n",
         "\n",
         "\n",
@@ -186,7 +186,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -196,7 +196,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d657c5f4-9d1f-4781-cb52-51edc668ad47"
+        "outputId": "755ab90b-e1a7-4720-b3ec-c7f995b0c8f1"
       },
       "source": [
         "\n",
@@ -223,7 +223,7 @@
         "\n",
         "possible_dir(puzzle) -> [\"RIGHT\",\"DOWN\"]\n",
         "gen_state(puzzle,possible_dir) -> input the list output the list of state\n",
-        "f_score(puzzle,goal)  -> f_score\n",
+        "h_score(puzzle,goal)  -> h_score\n",
         "\"\"\"\n",
         "\n",
         "def solve(start, goal):\n",
@@ -247,7 +247,7 @@
         "    least_score = 0\n",
         "    if len(move) != 1:\n",
         "      for s in range(len(move)-1):\n",
-        "        if f_score(move[s][0],goal) > f_score(move[s+1][0],goal): # fix this please ชนไม่ครบคู่\n",
+        "        if h_score(move[s][0],goal) > h_score(move[s+1][0],goal): # fix this please ชนไม่ครบคู่\n",
         "          least_score = s + 1\n",
         "    show_puzzle(move[least_score][0])\n",
         "    print(\"\")\n",
@@ -266,7 +266,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -365,7 +365,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 2
         }
       ]
     },
@@ -373,20 +373,27 @@
       "cell_type": "code",
       "metadata": {
         "id": "uPw8RBkXXgJg",
-        "outputId": "0d6f4e65-343b-487c-c4cc-ebd8be2614fe",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0d6f4e65-343b-487c-c4cc-ebd8be2614fe"
       },
       "source": [
-        "#\"013425678\"\n",
+        "\"\"\"\n",
+        "findIndx(puzzle,num) -> output as an i,j coordinate\n",
         "\n",
-        "for i in gen_state(\"013425678\",possible_dir(\"013425678\")):\n",
-        "  \n",
-        "  show_puzzle(i[0])\n",
-        "  print(\"\")"
+        "possible_dir(puzzle) -> [\"RIGHT\",\"DOWN\"]\n",
+        "gen_state(puzzle,possible_dir) -> input the list output the list of state\n",
+        "h_score(puzzle,goal)  -> h_score\n",
+        "\"\"\"\n",
+        "\n",
+        "def solve(puzzle,goal):\n",
+        "  \"\"\" Main progress \"\"\"\n",
+        "  path = [seq1,seq2]\n",
+        "  seq = [state1,state2]\n",
+        "  state = [puzzle,direction,h,g,f]"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
