--- a/8_puzzle_main.ipynb
+++ b/8_puzzle_main.ipynb
@@ -41,6 +41,7 @@
         "#Project begins here#\n",
         "\n",
         "import random\n",
+        "import copy\n",
         "\n",
         "def solve():\n",
         "  \"\"\"\n",
@@ -175,18 +176,28 @@
         "    if puzzle[n] != goal[n]:\n",
         "      h2_point += 1\n",
         "\n",
-        "  f_point = h2_point + h_point\n",
+        "  f_point = h_point #+ h2_point \n",
         "  return f_point\n",
         "\n",
         "\n",
-        "def show_puzzle(puzzle): # DONE!!!\n",
+        "def show_puzzle(route): # DONE!!!\n",
         "  \"\"\" Print puzzle in more understandable way lol \"\"\"\n",
-        "  for i in range(0,9,3):\n",
-        "    print(puzzle[i] + \" \" + puzzle[i+1] + \" \" + puzzle[i+2])\n",
+        "  for i in range(len(route)):\n",
+        "    puzzle = route[i][0]\n",
+        "    text = route[i][1]\n",
+        "    g = route[i][2]\n",
+        "    h = route[i][3]\n",
+        "    f = route[i][-1]\n",
+        "    print(\"Step {}: {}| g = {} h = {} f = {}\".format(i,text,g,h,f))\n",
+        "    print(puzzle)\n",
+        "    for k in range(0,9,3):\n",
+        "      print(puzzle[k] + \" \" + puzzle[k+1] + \" \" + puzzle[k+2])\n",
+        "      \n",
+        "    print(\"\")\n",
         "\n",
         "\n"
       ],
-      "execution_count": 1,
+      "execution_count": 67,
       "outputs": []
     },
     {
@@ -266,7 +277,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -376,7 +387,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0d6f4e65-343b-487c-c4cc-ebd8be2614fe"
+        "outputId": "db3cdffd-ca14-439a-bf9c-c361d4a9ee2d"
       },
       "source": [
         "\"\"\"\n",
@@ -387,25 +398,214 @@
         "h_score(puzzle,goal)  -> h_score\n",
         "\"\"\"\n",
         "\n",
+        "#path = [seq,seq]\n",
+        "  #seq = [state,state]\n",
+        "  #state = [puzzle,direction,g,h,f]\n",
+        "\n",
+        "  #a = [[\"123456780\",\"RIGHT\",1,14,16],[\"123450786\",\"UP\",1,12,15],[\"123450786\",\"LEFT\",3,18,19]]\n",
+        "  #b = [[\"123456780\",\"RIGHT\",1,14,16],[\"123450786\",\"UP\",2,12,15],[\"123450786\",\"LEFT\",6,18,24]]\n",
+        "  #path = [b,a]\n",
+        "  #print(sorted(path,key=lambda x:x[-1][2]))\n",
+        "\n",
         "def solve(puzzle,goal):\n",
         "  \"\"\" Main progress \"\"\"\n",
-        "  path = [seq1,seq2]\n",
-        "  seq = [state1,state2]\n",
-        "  state = [puzzle,direction,h,g,f]"
+        "\n",
+        "  path = []\n",
+        "  result = []\n",
+        "\n",
+        "  path.append([[puzzle,\"START\",0,h_score(puzzle,goal),h_score(puzzle,goal)]])\n",
+        "  #print(path)\n",
+        "    \n",
+        "  while len(path) != 0:\n",
+        "\n",
+        "    #sort path with the f score\n",
+        "    path = sorted(path,key= lambda x:x[-1][-1])\n",
+        "    \n",
+        "    #sort path again with the smallest step to make step count first priority\n",
+        "    path = sorted(path,key= lambda x:x[-1][2])\n",
+        "\n",
+        "    #check if win\n",
+        "    if path[0][-1][0] == goal:\n",
+        "      result = path[0]\n",
+        "      print(\"Reach the goal with this route\",result)\n",
+        "      break\n",
+        "\n",
+        "    #choose route and state to continue\n",
+        "    current_route = copy.deepcopy(path[0])\n",
+        "    current_state = current_route[-1]\n",
+        "    current_puzzle = current_state[0]\n",
+        "\n",
+        "    current_g = current_state[2]\n",
+        "    current_h = current_state[3]\n",
+        "    current_f = current_state[4]\n",
+        "\n",
+        "    #generate possible state into the path\n",
+        "    #print(\"Current route = \",current_route)\n",
+        "    #print(\"Current state = \",current_state)\n",
+        "    next_state = gen_state(current_puzzle,possible_dir(current_puzzle))\n",
+        "    #print(next_state)\n",
+        "\n",
+        "    # remove repeat state\n",
+        "    for item in current_route:\n",
+        "        for dir in next_state:\n",
+        "          repeat = item[0] == dir[0]\n",
+        "          if repeat:\n",
+        "            next_state.remove(dir)\n",
+        "\n",
+        "    # remove dead end\n",
+        "    if len(next_state) == 0:\n",
+        "      path.pop(0)\n",
+        "      continue\n",
+        "\n",
+        "    for state in next_state:\n",
+        "      next_route = copy.deepcopy(current_route)\n",
+        "      #next_route = current_route.copy()\n",
+        "      g = current_g + 1\n",
+        "      h = h_score(state[0],goal)\n",
+        "\n",
+        "      state.append(g)\n",
+        "      state.append(h)\n",
+        "      state.append(g+h)\n",
+        "\n",
+        "      # add new state to the route\n",
+        "      next_route.append(state)\n",
+        "\n",
+        "      #add new route to the path\n",
+        "      path.append(next_route)\n",
+        "\n",
+        "    # remove explored route  \n",
+        "    path.pop(0)\n",
+        "    \n",
+        "\n",
+        "  return result\n",
+        "\n",
+        "\n",
+        "x = \"152703468\"\n",
+        "easy = \"123405678\"\n",
+        "another = \"870246153\"\n",
+        "solution = solve(x,\"123456780\")\n",
+        "show_puzzle(solution)"
       ],
-      "execution_count": null,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "4 1 3\n",
-            "0 2 5\n",
+            "Reach the goal with this route [['152703468', 'START', 0, 10, 10], ['152073468', 'LEFT', 1, 12, 13], ['152473068', 'DOWN', 2, 10, 12], ['152473608', 'RIGHT', 3, 10, 13], ['152403678', 'UP', 4, 10, 14], ['102453678', 'UP', 5, 10, 15], ['012453678', 'LEFT', 6, 12, 18], ['412053678', 'DOWN', 7, 12, 19], ['412653078', 'DOWN', 8, 10, 18], ['412653708', 'RIGHT', 9, 8, 17], ['412603758', 'UP', 10, 10, 20], ['412063758', 'LEFT', 11, 10, 21], ['012463758', 'UP', 12, 10, 22], ['102463758', 'RIGHT', 13, 8, 21], ['120463758', 'RIGHT', 14, 6, 20], ['123460758', 'DOWN', 15, 4, 19], ['123406758', 'LEFT', 16, 4, 20], ['123456708', 'DOWN', 17, 2, 19], ['123456780', 'RIGHT', 18, 0, 18]]\n",
+            "Step 0: START| g = 0 h = 10 f = 10\n",
+            "152703468\n",
+            "1 5 2\n",
+            "7 0 3\n",
+            "4 6 8\n",
+            "\n",
+            "Step 1: LEFT| g = 1 h = 12 f = 13\n",
+            "152073468\n",
+            "1 5 2\n",
+            "0 7 3\n",
+            "4 6 8\n",
+            "\n",
+            "Step 2: DOWN| g = 2 h = 10 f = 12\n",
+            "152473068\n",
+            "1 5 2\n",
+            "4 7 3\n",
+            "0 6 8\n",
+            "\n",
+            "Step 3: RIGHT| g = 3 h = 10 f = 13\n",
+            "152473608\n",
+            "1 5 2\n",
+            "4 7 3\n",
+            "6 0 8\n",
+            "\n",
+            "Step 4: UP| g = 4 h = 10 f = 14\n",
+            "152403678\n",
+            "1 5 2\n",
+            "4 0 3\n",
             "6 7 8\n",
             "\n",
-            "1 0 3\n",
-            "4 2 5\n",
+            "Step 5: UP| g = 5 h = 10 f = 15\n",
+            "102453678\n",
+            "1 0 2\n",
+            "4 5 3\n",
             "6 7 8\n",
+            "\n",
+            "Step 6: LEFT| g = 6 h = 12 f = 18\n",
+            "012453678\n",
+            "0 1 2\n",
+            "4 5 3\n",
+            "6 7 8\n",
+            "\n",
+            "Step 7: DOWN| g = 7 h = 12 f = 19\n",
+            "412053678\n",
+            "4 1 2\n",
+            "0 5 3\n",
+            "6 7 8\n",
+            "\n",
+            "Step 8: DOWN| g = 8 h = 10 f = 18\n",
+            "412653078\n",
+            "4 1 2\n",
+            "6 5 3\n",
+            "0 7 8\n",
+            "\n",
+            "Step 9: RIGHT| g = 9 h = 8 f = 17\n",
+            "412653708\n",
+            "4 1 2\n",
+            "6 5 3\n",
+            "7 0 8\n",
+            "\n",
+            "Step 10: UP| g = 10 h = 10 f = 20\n",
+            "412603758\n",
+            "4 1 2\n",
+            "6 0 3\n",
+            "7 5 8\n",
+            "\n",
+            "Step 11: LEFT| g = 11 h = 10 f = 21\n",
+            "412063758\n",
+            "4 1 2\n",
+            "0 6 3\n",
+            "7 5 8\n",
+            "\n",
+            "Step 12: UP| g = 12 h = 10 f = 22\n",
+            "012463758\n",
+            "0 1 2\n",
+            "4 6 3\n",
+            "7 5 8\n",
+            "\n",
+            "Step 13: RIGHT| g = 13 h = 8 f = 21\n",
+            "102463758\n",
+            "1 0 2\n",
+            "4 6 3\n",
+            "7 5 8\n",
+            "\n",
+            "Step 14: RIGHT| g = 14 h = 6 f = 20\n",
+            "120463758\n",
+            "1 2 0\n",
+            "4 6 3\n",
+            "7 5 8\n",
+            "\n",
+            "Step 15: DOWN| g = 15 h = 4 f = 19\n",
+            "123460758\n",
+            "1 2 3\n",
+            "4 6 0\n",
+            "7 5 8\n",
+            "\n",
+            "Step 16: LEFT| g = 16 h = 4 f = 20\n",
+            "123406758\n",
+            "1 2 3\n",
+            "4 0 6\n",
+            "7 5 8\n",
+            "\n",
+            "Step 17: DOWN| g = 17 h = 2 f = 19\n",
+            "123456708\n",
+            "1 2 3\n",
+            "4 5 6\n",
+            "7 0 8\n",
+            "\n",
+            "Step 18: RIGHT| g = 18 h = 0 f = 18\n",
+            "123456780\n",
+            "1 2 3\n",
+            "4 5 6\n",
+            "7 8 0\n",
             "\n"
           ]
         }
